# cmake_conan_gtest

./: .gitignore  CMakeLists.txt  mult_test.cpp  multiplizierer_optimierer.hpp  pig_test.cpp  schwein.cpp  schwein.hpp  test.cpp
euro_to_dollar/: CMakeLists.txt  euro_to_dollar_application_test.cpp  euro_to_dollar_application_test.h  test_main.cpp
fakes/: CMakeLists.txt  dependency_to_fake.cpp  dependency_to_fake.hpp  my_service_using_dependency.hpp  my_service_using_dependency_test.cpp  my_service_using_dependency_test.hpp
multiplier/: CMakeLists.txt  multiplizierer.hpp
person_service/: CMakeLists.txt  antipath_checker.hpp  fancy_throw_asserts.hpp  person.hpp  person_repository.hpp  person_service_exception.hpp  person_service_impl.cpp  person_service_impl.hpp  person_service_tests.cpp  repository_exception.hpp
personen_service/: CMakeLists.txt  person.h  person_repository.h  person_service_impl.cpp  person_service_impl.h  personen_service_exception.cpp  personen_service_exception.h  personen_service_tests.cpp  repository_exception.h
piggy/: CMakeLists.txt  pig_test.cpp  piggy.cpp  piggy.hpp
qt_minimal/: CMakeLists.txt  qt_minimal.cpp
visual_studio/EuroToDollarCalculatorApplication/EuroToDollarCalculatorApplication/: EuroToDollarCalculatorApplication.h  euro_to_dollar_presenter_impl.h
visual_studio/EuroToDollarCalculatorApplication/EuroToDollarCalculatorApplicationGUITest/: EuroToDollarCalculatorApplicationGUITest.vcxproj  EuroToDollarCalculatorApplicationGUITest.vcxproj.filters  EuroToDollarCalculatorApplicationTest.cpp  euro_to_dollar_presenter_Test.cpp  euro_to_dollar_presenter_Test.h
